--- a/Exercicios/ex026/mq002/estilo/style.css
+++ b/Exercicios/ex026/mq002/estilo/style.css
@@ -6,13 +6,15 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 html,body{
+    background-color: black;
     height: 100vh;
     width: 100vw;
-    background-color: black;
     background-size: contain;
+    background-repeat: no-repeat;
 }
+
 h1{
-color: white;
-padding: 10px;
-text-align: center;
+    color: white;
+    text-align: center;
+    padding: 20px;
 }
