--- a/Exercicios/ex026/mq002/estilo/style.css
+++ b/Exercicios/ex026/mq002/estilo/style.css
@@ -9,7 +9,7 @@ html,body{
     background-color: black;
     height: 100vh;
     width: 100vw;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
