--- a/Exercicios/ex026/mq004/estilos/mediaquery.css
+++ b/Exercicios/ex026/mq004/estilos/mediaquery.css
@@ -9,4 +9,44 @@ Pequenas telas :ate 600px
  grandes telas: acima de 1200px
   */
 
+@media print 
+
+  @media screen and (min-width:768px)and (max-width:992px) {
+ body{
+    background-image: url(../imagens/back-tablet.jpg);
+ }
+
+    img#phone{display: none; }
+    img#pc{display: none;}
+    img#print{display: none;}
+    img#tablete{display: block;
+    margin: auto;}
+    img#tv{display: none;}
+  }
   
+  @media screen and (min-width:992px)and (max-width:1200px) {
+    body{
+       background-image: url(../imagens/back-pc.jpg);
+    }
+   
+       img#phone{display: none; }
+       img#pc{display: block;
+        margin: auto;}
+       img#print{display: none;}
+       img#tablete{display: none;}
+       img#tv{display: none;}
+     }
+
+     
+  @media screen and (min-width:1200px) {
+    body{
+       background-image: url(../imagens/back-tv.jpg);
+    }
+   
+       img#phone{display: none; }
+       img#pc{display: none;}
+       img#print{display: none;}
+       img#tablete{display: none;}
+       img#tv{display: block;
+    margin: auto;}
+     }
